kernel/tests/data/invalid/incorrect_resultant_type_2.ck
data T : Prop where

data Invalid : Prop where
  | c : T